// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form type ahead component (dropdown) should render disabled when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <div
          class="govuk-typeahead--is-disabled css-14jk2my-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control govuk-typeahead__control--is-disabled css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    disabled=""
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <div
        class="govuk-typeahead--is-disabled css-14jk2my-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control govuk-typeahead__control--is-disabled css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  disabled=""
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (dropdown) should render with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (dropdown) should render with error when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group govuk-form-group--error"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <span
          class="govuk-error-message"
          id="type-ahead-error"
        >
          Some error message
        </span>
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control--error govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group govuk-form-group--error"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <span
        class="govuk-error-message"
        id="type-ahead-error"
      >
        Some error message
      </span>
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control--error govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (dropdown) should render with hint when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <span
          class="govuk-hint"
        >
          Select an option
        </span>
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <span
        class="govuk-hint"
      >
        Select an option
      </span>
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (dropdown) should render with label when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        >
          Type-ahead
        </label>
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      >
        Type-ahead
      </label>
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (select) should render disabled when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <div
          class="govuk-typeahead--is-disabled css-14jk2my-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control govuk-typeahead__control--is-disabled css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    disabled=""
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <div
        class="govuk-typeahead--is-disabled css-14jk2my-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control govuk-typeahead__control--is-disabled css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  disabled=""
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (select) should render with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (select) should render with error when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group govuk-form-group--error"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <span
          class="govuk-error-message"
          id="type-ahead-error"
        >
          Some error message
        </span>
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control--error govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group govuk-form-group--error"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <span
        class="govuk-error-message"
        id="type-ahead-error"
      >
        Some error message
      </span>
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control--error govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (select) should render with hint when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        />
        <span
          class="govuk-hint"
        >
          Select an option
        </span>
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      />
      <span
        class="govuk-hint"
      >
        Select an option
      </span>
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form type ahead component (select) should render with label when passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="govuk-form-group"
      >
        <label
          class="govuk-label govuk-label--s"
          for="type-ahead-input"
          id="type-ahead-label"
        >
          Type-ahead
        </label>
        <div
          class=" css-2b097c-container"
          id="type-ahead"
        >
          <div
            class="govuk-typeahead__control css-1g8ily9-Control"
          >
            <div
              class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
            >
              <div
                class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
              >
                Search
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="govuk-typeahead__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="type-ahead-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
              >
                <span
                  class="css-1yvy2vo-LoadingDot"
                />
                <span
                  class="css-zoievk-LoadingDot"
                />
                <span
                  class="css-x748d8-LoadingDot"
                />
              </div>
              <span
                class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="govuk-form-group"
    >
      <label
        class="govuk-label govuk-label--s"
        for="type-ahead-input"
        id="type-ahead-label"
      >
        Type-ahead
      </label>
      <div
        class=" css-2b097c-container"
        id="type-ahead"
      >
        <div
          class="govuk-typeahead__control css-1g8ily9-Control"
        >
          <div
            class="govuk-typeahead__value-container css-pilx6v-ValueContainer"
          >
            <div
              class="govuk-typeahead__placeholder css-ovmm9z-Placeholder"
            >
              Search
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="govuk-typeahead__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="type-ahead-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="govuk-typeahead__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class="govuk-typeahead__indicator-separator css-62wm9a-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="govuk-typeahead__indicator govuk-typeahead__dropdown-indicator css-hbt8bd-DropdownIndicator"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
